0.1.6 -> 0.1.7

- Added new splash screens


0.1.5 -> 0.1.6

- Fixed stack entry sync with current simulation data
- Fixed unread instruction when placed in the same line as a label
- Added menu (in View) to control memory columns visibility
- Fixed cross-platform compatibility
- Adding Chocolatey packaging


0.1.4 -> 0.1.5

- Fixed a bug that prevented updating registers used in STR or LDR instructions
- Fixed a bug where you could only use in the stack the first 10 registers
- Fixed a bug that prevented declaring structures in a structure
- Refactored CodeInterpreter to completely use PC
- Fixing wrong memory management (Big to Little endian)
- Added ASCII column in memory viewing table
- Fixed Stack address and Symbol address settings (enabled during simulation)
- Fixed transparent line numbers in editor


0.1.3 -> 0.1.4

- Fixed directives in BSS not being executed
- Enhanced CPSR/SPSR flag visibility
- Fixed memory search (GUI not updated when searched a address located on another page)
- Changed notifications format
- Added FlatPaks
- Added launching command ($jarmemu)
- Fixed char parsing error (deleting whitespaces)


0.1.2 -> 0.1.3

- ASR carry flag improved yet again (didn't work for positive values)
- Convert MOV instruction to SHIFT instruction (in the backend only) for better use of update flags
- Fixing a bug that prevented the leftest text of editor to be selected with mouse
- Fixing Regex parser arguments parsing (strip whitespaces)
- Two new themes (Nord & Cupertino) are now available
- Reworking data viewing (Registers, Stack, Memory)
- Adding dynamic settings
- Adding automatic breakpoints
- Fixing new file saving


0.1.1 -> 0.1.2

- Fixing character parsing
- Fixing unresponsive app bug due to inexistant save file
- Optimizing concurrent management (using bound properties instead of direct assignation)
- Fixing unrefreshed screen bug
- Adding global directive logic (actually usable now)
- Fixing the stack auto-scrolling for non-HDPI screens